making code compatible with java 8