@@ -5,6 +5,7 @@ import lombok.Value;
 import org.jetbrains.annotations.NotNull;
 import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
 
+import java.util.Collections;
 import java.util.Map;
 
 public class UpdateExpression
@@ -24,15 +25,9 @@ public class UpdateExpression
 
         @NotNull
         AttributeValue attributeValue;
-       public Map<String, AttributeValue>  getValues(){ return  Map.of( ":" + valueCode, attributeValue );  }
+       public Map<String, AttributeValue>  getValues(){ return Collections.singletonMap(":" + valueCode, attributeValue);  }
        public String serialize(){ return ":" + valueCode; }
     }
-    /*
-    public static class Plus {}
-    public static class Minus{}
-    public static class Function{}
-    public static class Path{}
-    */
     @Value
     @Builder
     public static class SetExpression
@@ -41,9 +36,4 @@ public class UpdateExpression
         String fieldDdbName;
         ConstantValue  value;
     }
-    /*
-    public static class AddExpression{}
-    public static class RemoveExpression{}
-    public static class DeleteExpression{}
-     */
 }
